Finished second part of related work.

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -707,3 +707,119 @@ year = {2018},
   year={2011},
   publisher={John Wiley \& Sons}
 }
+
+%%% new related work
+
+@inproceedings{daws1995tool,
+  title={The tool KRONOS},
+  author={Daws, Conrado and Olivero, Alfredo and Tripakis, Stavros and Yovine, Sergio},
+  booktitle={International Hybrid Systems Workshop},
+  pages={208--219},
+  year={1995},
+  organization={Springer}
+}
+
+@article{larsen1997uppaal,
+  title={UPPAAL in a nutshell},
+  author={Larsen, Kim G and Pettersson, Paul and Yi, Wang},
+  journal={International journal on software tools for technology transfer},
+  volume={1},
+  number={1},
+  pages={134--152},
+  year={1997},
+  publisher={Springer-Verlag}
+}
+
+% Model based fault detectors
+@article{zhang2013sensor,
+  title={Sensor fault detection, isolation and system reconfiguration based on extended Kalman filter for induction motor drives},
+  author={Zhang, Xinan and Foo, Gilbert and Don Vilathgamuwa, Mahinda and Tseng, King Jet and Bhangu, Bikramjit Singh and Gajanayake, Chandana},
+  journal={IET Electric Power Applications},
+  volume={7},
+  number={7},
+  pages={607--617},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{poon2016model,
+  title={Model-based fault detection and identification for switching power converters},
+  author={Poon, Jason and Jain, Palak and Konstantakopoulos, Ioannis C and Spanos, Costas and Panda, Sanjib Kumar and Sanders, Seth R},
+  journal={IEEE Transactions on Power Electronics},
+  volume={32},
+  number={2},
+  pages={1419--1430},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{garcia2022solar,
+  title={Solar panels string predictive and parametric fault diagnosis using low-cost sensors},
+  author={Garc{\'\i}a, Emilio and Ponluisa, Neisser and Quiles, Eduardo and Zotovic-Stanisic, Ranko and Guti{\'e}rrez, Santiago C},
+  journal={Sensors},
+  volume={22},
+  number={1},
+  pages={332},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{abid2020improved,
+  title={An improved negative selection algorithm-based fault detection method},
+  author={Abid, A and Khan, MT and Haq, IU and Anwar, S and Iqbal, J},
+  journal={IETE Journal of Research},
+  pages={1--12},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@INPROCEEDINGS{9848016,
+  author={Chopdar, Sumitsingh Mohansingh and Koshti, A.K.},
+  booktitle={2022 2nd International Conference on Intelligent Technologies (CONIT)}, 
+  title={Fault Detection and Classification in Power System Using Artificial Neural Network}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={1-6},
+  doi={10.1109/CONIT55038.2022.9848016}}
+
+@inproceedings{govender2010fault,
+  title={Fault diagnosis based on the artificial immune algorithm and negative selection},
+  author={Govender, P and Mensah, DA Kyereahene},
+  booktitle={2010 IEEE 17Th International Conference on Industrial Engineering and Engineering Management},
+  pages={418--423},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{alizadeh2016negative,
+  title={A negative selection immune system inspired methodology for fault diagnosis of wind turbines},
+  author={Alizadeh, Esmaeil and Meskin, Nader and Khorasani, Khashayar},
+  journal={IEEE transactions on cybernetics},
+  volume={47},
+  number={11},
+  pages={3799--3813},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{abid2017multidomain,
+  title={Multidomain features-based GA optimized artificial immune system for bearing fault detection},
+  author={Abid, Anam and Khan, Muhammad Tahir and Khan, Muhammad Salman},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics: Systems},
+  volume={50},
+  number={1},
+  pages={348--359},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{ren2020novel,
+  title={A novel fault diagnosis method based on improved negative selection algorithm},
+  author={Ren, Yanheng and Wang, Xianghua and Zhang, Chunming},
+  journal={IEEE Transactions on Instrumentation and Measurement},
+  volume={70},
+  pages={1--8},
+  year={2020},
+  publisher={IEEE}
+}
